cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

Set(INCLUDE_PATH include/)

IF(NOT DEFINED OCS_BUILD_SHARED)
	Set(OCS_BUILD_SHARED FALSE)
ENDIF(DEFINED OCS_BUILD_SHARED)

IF(NOT DEFINED OCS_BUILD_SHARED)
	Set(OCS_BUILD_SHARED FALSE)
ENDIF(DEFINED OCS_BUILD_SHARED)

IF(NOT DEFINED OCS_BUILD_STATIC)
	Set(OCS_BUILD_STATIC TRUE)
ENDIF(DEFINED OCS_BUILD_SHARED)


include_directories($INCLUDE_PATH)

IF(${OCS_BUILD_STATIC})
	add_library(OCS Static ${INCLUDE_PATH})
ENDIF(${OCS_BUILD_STATIC})

install(TARGETS OCS DESTINATION lib)